[package]
name = "marked-cli"
version = "0.3.1"
authors = ["David Kellum <dek-oss@gravitext.com>"]
license       = "MIT/Apache-2.0"
description   = "Command line tool for markup I/O processing"
repository    = "https://github.com/dekellum/marked"
readme        = "README.md"
keywords      = ["html", "sanitization"]
categories    = ["web-programming", "text-processing"]
build         = "build.rs"

edition = "2018"

[dependencies]
marked          = { version=">=0.3.0,  <0.4.0" }
html5ever       = { version=">=0.26.0, <0.27" }
encoding_rs     = { version=">=0.8.13, <0.9" }
clap            = { version=">=2.33.0, <2.34", default-features=false, features=["wrap_help"] }
log             = { version=">=0.4.4,  <0.4.15", features = ["std"] }

[[bin]]
name = "marked"
path = "src/main.rs"
doctest = false
bench = false
doc = false
test = false
