[package]
name          = "marked-sanitizer"
version       = "0.0.0"
authors       = ["David Kellum <dek-oss@gravitext.com>"]
edition       = "2018"
license       = "MIT/Apache-2.0"
description   = "Sanitizer for Märkəd"
repository    = "https://github.com/dekellum/marked"
readme        = "README.md"
keywords      = ["html", "sanitization"]
categories    = ["web-programming", "text-processing"]
build         = "build.rs"

[lib]
doctest = false

[dependencies]
marked        = { version=">=0.3.0", path="../marked" }
ammonia       = { version=">=3.1.0, <3.2" }
