[package]
name = "marked"
version = "0.3.0"
authors = ["David Kellum <dek-oss@gravitext.com>"]
edition = "2018"
license       = "MIT/Apache-2.0"
description   = "Parsing, filtering, selecting and serializing HTML/XML markup."
repository    = "https://github.com/dekellum/marked"
readme        = "README.md"
keywords      = ["html", "sanitization"]
categories    = ["web-programming", "text-processing"]
build         = "build.rs"

[lib]
doctest = false

[dependencies]
html5ever       = { version=">=0.25.1, <0.26" }
tendril         = { version=">=0.4.1,  <0.5", features=["encoding_rs"] }
encoding_rs     = { version=">=0.8.13, <0.9" }
xml-rs          = { version=">=0.8,    <0.9", package="xml-rs", optional=true }
string_cache    = { version=">=0.8.0,  <0.9" }
mime            = { version=">=0.3.14, <0.4" }
log             = { version=">=0.4.4,  <0.5", features = ["std"] }
lazy_static     = { version=">=1.3.0,  <1.5" }

[features]
default = []
xml = ["xml-rs"]

[dev-dependencies]
rand            = { version=">=0.7.0, <0.8" }
markup5ever_rcdom = { git="https://github.com/dekellum/html5ever", branch="rcdom" }

[package.metadata.docs.rs]
features = ["xml"]
